--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   json_serializable: ^6.9.0
   provider: ^6.1.2
   url_launcher: ^6.3.1
+  oauth2: ^2.0.3
+  flutter_appauth: ^8.0.3
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   mockito: 5.4.4
