--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ IntegrationsSettings__Discord__ClientId=123456789
 IntegrationsSettings__Discord__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Discord__RedirectUrl=http://localhost:4200/oauth2/discord/
 IntegrationsSettings__Discord__BotToken=ABCdefGHI123456789,OoO-09876azerty
+IntegrationsSettings__Notion__ClientId=123456789
+IntegrationsSettings__Notion__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
+IntegrationsSettings__Notion__RedirectUrl=http://localhost:4200/oauth2/notion/
 ConnectionStrings__DefaultDatabase=Host=zeus-db;Port=5432;Database=zeus;Username=zeus;Password=zeus
 POSTGRES_DB=triggo
 POSTGRES_USER=zeus
@@ -10,6 +13,8 @@ POSTGRES_PASSWORD=zeus
 POSTGRES_HOST=zeus-db
 POSTGRES_PORT=5432
 ASPNETCORE_ENVIRONMENT=Production
-Oauth2Settings__Google__ClientId=123456789
-Oauth2Settings__Google__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
-Oauth2Settings__Google__RedirectUrl=http://localhost:4200/oauth2/google/
+Oauth2Settings__Google__Clients__Web__ClientId=123456789
+Oauth2Settings__Google__Clients__Web__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
+Oauth2Settings__Google__Clients__Web__RedirectUrl=http://localhost:4200/oauth2/google/
+Oauth2Settings__Google__Clients__Android__ClientId=123456789
+Oauth2Settings__Google__Clients__iOS__ClientId=123456789
