--- a/backend/Zeus.Daemon.Infrastructure/Zeus.Daemon.Infrastructure.csproj
+++ b/backend/Zeus.Daemon.Infrastructure/Zeus.Daemon.Infrastructure.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="MassTransit" Version="8.3.4" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.4" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+      <PackageReference Include="NetCore.AutoRegisterDi" Version="2.2.1" />
     </ItemGroup>
 
     <ItemGroup>
