feat(api): add openai configuration

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -32,6 +32,9 @@
       "ClientId": "clientId",
       "ClientSecret": "",
       "RedirectUrl": ""
+    },
+    "OpenAi": {
+      "ApiEndpoint": "https://api.openai.com/v1/"
     }
   },
   "OAuth2Settings": {
