rrefactor(mobile): Make keystore a shared one

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -41,6 +41,15 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    signingConfigs {
+        debug {
+            storeFile file('shared_debug.keystore')
+            storePassword 'yannmasson'
+            keyAlias 'androiddebugkey'
+            keyPassword 'yannmasson'
+        }
+    }
 }
 
 flutter {
