feat(daemon): add integrations management

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,25 @@
+ASPNETCORE_ENVIRONMENT=Production
+
 JwtSettings__Secret=ABCdefGHI123456789,OoO-09876azerty
+
 IntegrationsSettings__Discord__ClientId=123456789
 IntegrationsSettings__Discord__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Discord__RedirectUrl=http://localhost:4200/oauth2/discord/
 IntegrationsSettings__Discord__BotToken=ABCdefGHI123456789,OoO-09876azerty
+
+Oauth2Settings__Google__ClientId=123456789
+Oauth2Settings__Google__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
+Oauth2Settings__Google__RedirectUrl=http://localhost:4200/oauth2/google/
+
 ConnectionStrings__DefaultDatabase=Host=zeus-db;Port=5432;Database=zeus;Username=zeus;Password=zeus
 POSTGRES_DB=triggo
 POSTGRES_USER=zeus
 POSTGRES_PASSWORD=zeus
 POSTGRES_HOST=zeus-db
 POSTGRES_PORT=5432
+
 RABBITMQ_DEFAULT_USER=zeus
 RABBITMQ_DEFAULT_PASS=zeus
-ASPNETCORE_ENVIRONMENT=Production
-Oauth2Settings__Google__ClientId=123456789
-Oauth2Settings__Google__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
-Oauth2Settings__Google__RedirectUrl=http://localhost:4200/oauth2/google/
+MessageBrokers__RabbitMq__Host=amqp://zeus-message-broker:5672
+MessageBrokers__RabbitMq__Username=zeus
+MessageBrokers__RabbitMq__Password=zeus
