cd: fix docker compose message broker health checks

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ RABBITMQ_DEFAULT_PASS=zeus
 MessageBrokers__RabbitMq__Host=amqp://zeus-message-broker:5672
 MessageBrokers__RabbitMq__Username=zeus
 MessageBrokers__RabbitMq__Password=zeus
+
+GRpcApiSettings__Method=http
+GRpcApiSettings__Host=zeus-grpc-api
+GRpcApiSettings__Port=5069
