--- a/backend/Zeus.Daemon.Runner/appsettings.Development.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.Development.json
@@ -20,7 +20,7 @@
     }
   },
   "GRpcApiSettings": {
-    "method": "http",
+    "Method": "http",
     "Host": "localhost",
     "Port": 5069
   },
