--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   provider: ^6.1.2
   url_launcher: ^6.3.1
   dotted_border: ^2.1.0
+  dotted_line: ^3.2.3
 
 dev_dependencies:
   mockito: 5.4.4
