--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/icons/discord.svg
     - assets/icons/user.svg
     - assets/icons/google.svg
+    - assets/icons/notion.svg
 
   uses-material-design: true
 
