feat(api): add riot configuration

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -32,6 +32,15 @@
       "ClientId": "clientId",
       "ClientSecret": "",
       "RedirectUrl": ""
+    },
+    "OpenAi": {
+      "ApiEndpoint": "https://api.openai.com/v1/"
+    },
+    "Riot": {
+      "PlatformApiEndpoint": "https://euw1.api.riotgames.com/",
+      "RegionalApiEndpoint": "https://europe.api.riotgames.com/",
+      "DataDragonApiEndpoint": "https://ddragon.leagueoflegends.com/",
+      "ApiKey": ""
     }
   },
   "OAuth2Settings": {
