--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -35,6 +35,12 @@
     },
     "OpenAi": {
       "ApiEndpoint": "https://api.openai.com/v1/"
+    },
+    "Riot": {
+      "PlatformApiEndpoint": "https://euw1.api.riotgames.com/",
+      "RegionalApiEndpoint": "https://europe.api.riotgames.com/",
+      "DataDragonApiEndpoint": "https://ddragon.leagueoflegends.com/",
+      "ApiKey": ""
     }
   },
   "OAuth2Settings": {
