feat(mobile): Add the formz for the OpenAI account link

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/icons/user.svg
     - assets/icons/google.svg
     - assets/icons/notion.svg
+    - assets/icons/openai.svg
 
   uses-material-design: true
 
