--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^19.0.0",
     "@ng-icons/core": "^29.10.0",
     "@ng-icons/heroicons": "^29.10.0",
+    "@ng-icons/lucide": "^26.3.0",
     "@ngrx/operators": "^18.1.1",
     "@ngrx/signals": "^18.1.1",
     "@spartan-ng/ui-core": "0.0.1-alpha.356",
@@ -34,6 +35,7 @@
     "@spartan-ng/ui-formfield-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-forms-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-label-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-sheet-brain": "0.0.1-alpha.356",
     "class-variance-authority": "^0.6.0",
     "clsx": "^2.1.1",
     "ngx-toastr": "^19.0.0",
