--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -337,7 +337,7 @@ flutter:
     - ./assets/icons/wrench.svg
     - ./assets/icons/x-circle.svg
     - ./assets/icons/x-mark.svg
-    - ./assets/icons/riot.svg
+    - ./assets/icons/league_of_legends.svg
 
   uses-material-design: true
 
