--- a/backend/Zeus.Common.Domain/Resources/providers-settings.json
+++ b/backend/Zeus.Common.Domain/Resources/providers-settings.json
@@ -47,7 +47,7 @@
             "Type": "datetime"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Discord": {
             "Require": "OneOrMore"
           }
@@ -78,7 +78,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Discord": {
             "Require": "Single"
           }
@@ -123,7 +123,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "OneOrMore"
           }
@@ -161,7 +161,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "OneOrMore"
           }
@@ -210,7 +210,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "OneOrMore"
           }
@@ -259,7 +259,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "OneOrMore"
           }
@@ -300,7 +300,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "Single"
           }
@@ -339,7 +339,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "Single"
           }
@@ -383,7 +383,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "Single"
           }
@@ -401,7 +401,7 @@
           }
         },
         "Facts": {},
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "Single"
           }
@@ -419,7 +419,7 @@
           }
         },
         "Facts": {},
-        "Integrations": {
+        "Dependencies": {
           "Notion": {
             "Require": "Single"
           }
@@ -461,7 +461,7 @@
             "Type": "string"
           }
         },
-        "Integrations": {
+        "Dependencies": {
           "OpenAi": {
             "Require": "Single"
           }
