--- a/backend/Zeus.Common.Domain/Resources/providers-settings.json
+++ b/backend/Zeus.Common.Domain/Resources/providers-settings.json
@@ -49,7 +49,7 @@
         },
         "Dependencies": {
           "Discord": {
-            "Require": "OneOrMore"
+            "Require": "Multiple"
           }
         }
       }
@@ -125,7 +125,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "OneOrMore"
+            "Require": "Multiple"
           }
         }
       },
@@ -163,7 +163,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "OneOrMore"
+            "Require": "Multiple"
           }
         }
       },
@@ -212,7 +212,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "OneOrMore"
+            "Require": "Multiple"
           }
         }
       },
@@ -261,7 +261,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "OneOrMore"
+            "Require": "Multiple"
           }
         }
       }
