--- a/backend/Zeus.Daemon.Runner/appsettings.Development.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.Development.json
@@ -17,6 +17,12 @@
     },
     "Notion": {
       "ApiEndpoint": "https://api.notion.com/v1/"
+    },
+    "Riot": {
+      "PlatformApiEndpoint": "https://euw1.api.riotgames.com/",
+      "RegionalApiEndpoint": "https://europe.api.riotgames.com/",
+      "DataDragonApiEndpoint": "https://ddragon.leagueoflegends.com/",
+      "ApiKey": ""
     }
   },
   "GRpcApiSettings": {
