feat(daemon): add openapi completion action

--- a/backend/Zeus.Common.Domain/Resources/providers-settings.json
+++ b/backend/Zeus.Common.Domain/Resources/providers-settings.json
@@ -443,15 +443,15 @@
             "Description": "The model to use for the completion.",
             "Type": "string"
           },
+          "Context": {
+            "Name": "Context",
+            "Description": "The context to generate the completion from.",
+            "Type": "string"
+          },
           "Prompt": {
             "Name": "Prompt",
             "Description": "The prompt to generate the completion from.",
             "Type": "string"
-          },
-          "MaxTokens": {
-            "Name": "Max tokens",
-            "Description": "The maximum number of tokens to generate.",
-            "Type": "integer"
           }
         },
         "Facts": {
