--- a/backend/Zeus.Daemon.Runner/appsettings.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.json
@@ -18,6 +18,9 @@
     "Notion": {
       "ApiEndpoint": "https://api.notion.com/v1/"
     },
+    "OpenAi": {
+      "ApiEndpoint": "https://api.openai.com/v1/"
+    },
     "Riot": {
       "PlatformApiEndpoint": "https://euw1.api.riotgames.com/",
       "RegionalApiEndpoint": "https://europe.api.riotgames.com/",
