--- a/backend/Zeus.Common.Domain/Resources/providers-settings.json
+++ b/backend/Zeus.Common.Domain/Resources/providers-settings.json
@@ -49,7 +49,7 @@
         },
         "Dependencies": {
           "Discord": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       }
@@ -80,7 +80,7 @@
         },
         "Dependencies": {
           "Discord": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       }
@@ -125,7 +125,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "Multiple"
+            "Require": "multiple"
           }
         }
       },
@@ -163,7 +163,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "Multiple"
+            "Require": "multiple"
           }
         }
       },
@@ -212,7 +212,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       },
@@ -261,7 +261,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       }
@@ -302,7 +302,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       },
@@ -341,7 +341,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       },
@@ -385,7 +385,7 @@
         },
         "Dependencies": {
           "Notion": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       },
@@ -403,7 +403,7 @@
         "Facts": {},
         "Dependencies": {
           "Notion": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       },
@@ -421,7 +421,7 @@
         "Facts": {},
         "Dependencies": {
           "Notion": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       }
@@ -463,7 +463,7 @@
         },
         "Dependencies": {
           "OpenAi": {
-            "Require": "Single"
+            "Require": "single"
           }
         }
       }
@@ -513,7 +513,7 @@
         },
         "Dependencies": {
           "LeagueOfLegends": {
-            "Require": "Multiple"
+            "Require": "multiple"
           }
         }
       },
@@ -562,7 +562,7 @@
         },
         "Dependencies": {
           "LeagueOfLegends": {
-            "Require": "Multiple"
+            "Require": "multiple"
           }
         }
       },
@@ -611,7 +611,7 @@
         },
         "Dependencies": {
           "LeagueOfLegends": {
-            "Require": "Multiple"
+            "Require": "multiple"
           }
         }
       }
