feat(backend): add API manifest

--- a/backend/Zeus.Api.Presentation.Web/appsettings.Development.json
+++ b/backend/Zeus.Api.Presentation.Web/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "DefaultDatabase": "Host=localhost;Username=zeus;Password=zeus;Port=35432;Database=triggo;Pooling=true;"
+  },
+  "Manifest": {
+    "ClientHost": "localhost"
   }
 }
