--- a/backend/Zeus.Api.Presentation.Web/appsettings.json
+++ b/backend/Zeus.Api.Presentation.Web/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultDatabase": "Host=myserver;Username=mylogin;Password=mypass;Port=5432;Database=mydatabase"
+  },
+  "Manifest": {
+    "ClientHost": "localhost"
   }
 }
