--- a/backend/Zeus.Common.Domain/Resources/providers-settings.json
+++ b/backend/Zeus.Common.Domain/Resources/providers-settings.json
@@ -60,9 +60,14 @@
         "Description": "Sends a message to a specific guild channel as triggo bot.",
         "Icon": "chat-bubble-oval-left-ellipsis",
         "Parameters": {
+          "GuildId": {
+            "Name": "Guild id",
+            "Description": "The ID of the guild to monitor.",
+            "Type": "string"
+          },
           "ChannelId": {
             "Name": "Channel id",
-            "Description": "The ID of the channel to send the message to.",
+            "Description": "The ID of the channel to monitor.",
             "Type": "string"
           },
           "Content": {
