refactor(backend): update domain event dispatching

--- a/backend/Zeus.Daemon.Runner/appsettings.Development.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Grpc": "Warning",
-      "System": "Warning"
+      "System": "Warning",
+      "MassTransit": "Information"
     }
   },
   "IntegrationsSettings": {
