--- a/backend/Zeus.Daemon.Runner/appsettings.json
+++ b/backend/Zeus.Daemon.Runner/appsettings.json
@@ -5,7 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Grpc": "Information",
-      "System": "Information"
+      "System": "Information",
+      "MassTransit": "Information"
     }
   },
   "IntegrationsSettings": {
