--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -54,6 +54,18 @@
         "admin:org",
         "project"
       ]
+    },
+    "Gmail": {
+      "ApiEndpoint": "https://gmail.googleapis.com/v1/",
+      "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/v2/auth",
+      "ClientId": "clientId",
+      "ClientSecret": "",
+      "RedirectUrl": "",
+      "Scopes": [
+        "https://www.googleapis.com/auth/gmail.modify",
+        "https://www.googleapis.com/auth/gmail.compose"
+      ],
+      "AccessType": "offline"
     }
   },
   "OAuth2Settings": {
