--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -41,6 +41,18 @@
       "RegionalApiEndpoint": "https://europe.api.riotgames.com/",
       "DataDragonApiEndpoint": "https://ddragon.leagueoflegends.com/",
       "ApiKey": ""
+    },
+    "Gmail": {
+      "ApiEndpoint": "https://gmail.googleapis.com/v1/",
+      "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/v2/auth",
+      "ClientId": "clientId",
+      "ClientSecret": "",
+      "RedirectUrl": "",
+      "Scopes": [
+        "https://www.googleapis.com/auth/gmail.modify",
+        "https://www.googleapis.com/auth/gmail.compose"
+      ],
+      "AccessType": "offline"
     }
   },
   "OAuth2Settings": {
