--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -41,6 +41,13 @@
       "RegionalApiEndpoint": "https://europe.api.riotgames.com/",
       "DataDragonApiEndpoint": "https://ddragon.leagueoflegends.com/",
       "ApiKey": ""
+    },
+    "Github": {
+      "ApiEndpoint": "https://api.github.com/",
+      "OAuth2Endpoint": "https://github.com/",
+      "ClientId": "clientId",
+      "ClientSecret": "",
+      "RedirectUrl": ""
     }
   },
   "OAuth2Settings": {
