--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.json
@@ -47,7 +47,13 @@
       "OAuth2Endpoint": "https://github.com/",
       "ClientId": "clientId",
       "ClientSecret": "",
-      "RedirectUrl": ""
+      "RedirectUrl": "",
+      "Scopes": [
+        "user",
+        "repo",
+        "admin:org",
+        "project"
+      ]
     }
   },
   "OAuth2Settings": {
