feat(backend): add Gmail service and integration creation

--- a/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
+++ b/backend/Zeus.Api.Presentation.Shared/appsettings.shared.Development.json
@@ -44,15 +44,19 @@
     },
     "Gmail": {
       "ApiEndpoint": "https://gmail.googleapis.com/v1/",
+      "UserInfoEndpoint": "https://www.googleapis.com/oauth2/v2/userinfo",
       "OAuth2Endpoint": "https://accounts.google.com/o/oauth2/v2/auth",
+      "TokenEndpoint": "https://oauth2.googleapis.com/token",
       "ClientId": "clientId",
       "ClientSecret": "",
       "RedirectUrl": "",
       "Scopes": [
         "https://www.googleapis.com/auth/gmail.modify",
-        "https://www.googleapis.com/auth/gmail.compose"
-      ],
-      "AccessType": "offline"
+        "https://www.googleapis.com/auth/gmail.compose",
+        "https://www.googleapis.com/auth/userinfo.profile",
+        "https://www.googleapis.com/auth/userinfo.email",
+        "openid"
+      ]
     }
   },
   "OAuth2Settings": {
