feat(api): add github config

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ IntegrationsSettings__Discord__BotToken=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Notion__ClientId=123456789
 IntegrationsSettings__Notion__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
 IntegrationsSettings__Notion__RedirectUrl=http://localhost:4200/oauth2/notion/
+IntegrationsSettings__Github__ClientId=123456789
+IntegrationsSettings__Github__ClientSecret=ABCdefGHI123456789,OoO-09876azerty
+IntegrationsSettings__Github__RedirectUrl=http://localhost:4200/oauth2/notion/
+
 IntegrationsSettings__Riot__ApiKey=ABCdefGHI123456789,OoO-09876azerty
 
 Oauth2Settings__Google__Clients__Web__ClientId=123456789
